k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-shivam-deployment
  namespace: kubernetes-cluster-shivam
  labels:
    app: backend-shivam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-shivam
  template:
    metadata:
      labels:
        app: backend-shivam
    spec:
      containers:
        - name: backend-shivam
          image: nagpshivam/ecom-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
